removed twinning parameters

--- a/examples/ConfigFiles/Phase_Phenopowerlaw_BCC-Martensite.config
+++ b/examples/ConfigFiles/Phase_Phenopowerlaw_BCC-Martensite.config
@@ -1,34 +1,25 @@
 # Tasan et.al. 2015 Acta Materalia
 # Tasan et.al. 2015 International Journal of Plasticity
 # Diehl et.al. 2015 Meccanica
-[BCC_Martensite]
-plasticity              phenopowerlaw
+[BCC-Martensite]
+
 elasticity              hooke
+plasticity              phenopowerlaw
+
 lattice_structure       bcc
-Nslip                   12  12               # per family
-Ntwin                    0                   # per family
+Nslip                   12  12                  # per family
+Ntwin                    0                      # per family
 c11                     417.4e9
 c12                     242.4e9
 c44                     211.1e9
 gdot0_slip              0.001
 n_slip                  20
-tau0_slip               405.8e6  456.7e6 0 0    # per family
-tausat_slip             872.9e6  971.2e6 0 0    # per family
-gdot0_twin              0.001
-n_twin                  20
-tau0_twin               31.0e6                  # per family
-s_pr                    0                       # push-up factor for slip saturation due to twinning
-twin_b                  0
-twin_c                  0
-twin_d                  0
-twin_e                  0
+tau0_slip               405.8e6  456.7e6        # per family
+tausat_slip             872.9e6  971.2e6        # per family
 h0_slipslip             563.0e9
-h0_twinslip             0
-h0_twintwin             0
 interaction_slipslip    1 1 1.4 1.4 1.4 1.4
 interaction_sliptwin    1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
 interaction_twinslip    1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
 interaction_twintwin    1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
 w0_slip                 2.0
-atol_resistance         1
 (output) totalshear
