inconsistency lead to compile error undefined reference to 'matmul_mkl_f64_'

--- a/code/Makefile
+++ b/code/Makefile
@@ -51,7 +51,7 @@ MAXOPTI := DEFENSIVE
 endif
 ifeq "$(OPTIMIZATION)" "AGGRESSIVE"
 OPTI    := AGGRESSIVE
-MAXOPTI := DEFENSIVE
+MAXOPTI := AGGRESSIVE
 endif
 ifeq "$(OPTIMIZATION)" "ULTRA"
 OPTI    := AGGRESSIVE
