updated path to include ConfigFiles

--- a/examples/MSC.Marc/material.config
+++ b/examples/MSC.Marc/material.config
@@ -2,7 +2,7 @@
 <homogenization>
 #-------------------#
 
-{../../code/config/Homogenization_None_Dummy.config}
+{../ConfigFiles/Homogenization_None_Dummy.config}
 
 #-------------------#
 <microstructure>
@@ -524,12 +524,12 @@ crystallite	1
 <crystallite>
 #-------------------#
 
-{../../code/config/Crystallite_All.config}
+{../ConfigFiles/Crystallite_All.config}
 
 #-------------------#
 <phase>
 #-------------------#
 
-{../../code/config/Phase_Phenopowerlaw_Aluminum.config}
+{../ConfigFiles/Phase_Phenopowerlaw_Aluminum.config}
 
-{../../code/config/Phase_J2_AluminumIsotropic.config}
+{../ConfigFiles/Phase_J2_AluminumIsotropic.config}
