--- a/CONFIG
+++ b/CONFIG
@@ -8,4 +8,4 @@ set DAMASK_NUM_THREADS    = 4
 set MSC_ROOT              = /opt/msc
 set MARC_VERSION          = 2016
 
-set ABAQUS_VERSION        = 6.14-5
+set ABAQUS_VERSION        = 2017
