set home in Gitlab settings

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ variables:
   #================================================================================================
   # Shortcut names
   #================================================================================================
-  DAMASKROOT:                      "~/GitlabCI_Pipeline_$CI_PIPELINE_ID/DAMASK"
+  DAMASKROOT:                      "$HOME/GitlabCI_Pipeline_$CI_PIPELINE_ID/DAMASK"
 
   #================================================================================================
   # Names of module files to load
