--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,9 +85,7 @@ checkout:
     - mkdir -p $DAMASKROOT
     - git clone git@magit1.mpie.de:damask/DAMASK.git $DAMASKROOT
     - cd $DAMASKROOT
-    - export CI_COMMIT_SHA
-    - echo $CI_COMMIT_SHA
-    - git checkout $CI_COMMIT_SHA git@magit1.mpie.de:damask/DAMASK.git
+    - git checkout $CI_COMMIT_SHA
     - git clone git@magit1.mpie.de:damask/PRIVATE.git
     - eval 'source $DAMASKROOT/DAMASK_env.sh'
     - make -C $DAMASKROOT install
