absolute path not working

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,6 +87,7 @@ checkout:
     - cd $DAMASKROOT
     - git checkout $CI_COMMIT_SHA
     - git clone git@magit1.mpie.de:damask/PRIVATE.git
+    - echo $DAMASKROOT
     - eval 'source $DAMASKROOT/DAMASK_env.sh'
     - make -C $DAMASKROOT install
 
