--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,7 +88,8 @@ checkout:
     - git checkout $CI_COMMIT_SHA
     - git clone git@magit1.mpie.de:damask/PRIVATE.git
     - echo $DAMASKROOT
-    - eval 'source DAMASK_env.sh'
+    - ls
+    - eval 'source ./DAMASK_env.sh'
     - make install
 
 ###################################################################################################
