--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,16 +83,14 @@ checkout:
     - echo $CI_PIPELINE_ID > $HOME/GitLabCI.lock
   script:
     - mkdir -p $DAMASKROOT
-    - git clone git@magit1.mpie.de:damask/DAMASK.git $DAMASKROOT
-    - cd $DAMASKROOT
-    - git checkout $CI_COMMIT_SHA
-    #- git clone git@magit1.mpie.de:damask/PRIVATE.git
+    - git clone -b $CI_COMMIT_SHA git@magit1.mpie.de:damask/DAMASK.git $DAMASKROOT
+    #- git clone -q git@magit1.mpie.de:damask/PRIVATE.git
     - echo $DAMASKROOT
     - echo $PWD
     - type source
     - type .
     - type cd
-    - cat DAMASK_env.sh
+    - cat $DAMASKROOT/DAMASK_env.sh
     - echo $SHELL
     - echo $0
     - . $DAMASKROOT/DAMASK_env.sh > /tmp/log
