--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,10 +83,10 @@ checkout:
     - echo $CI_PIPELINE_ID > $HOME/GitLabCI.lock
   script:
     - mkdir -p $DAMASKROOT
-    - git clone git@magit1.mpie.de:damask/DAMASK.git $DAMASKROOT
+    - git clone -q git@magit1.mpie.de:damask/DAMASK.git $DAMASKROOT
     - cd $DAMASKROOT
     - git checkout $CI_COMMIT_SHA
-    #- git clone -q git@magit1.mpie.de:damask/PRIVATE.git
+    - git clone -q git@magit1.mpie.de:damask/PRIVATE.git
     - source $DAMASKROOT/DAMASK_env.sh
     - make install
 
