--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -90,218 +90,218 @@ checkout:
     - source $DAMASKROOT/DAMASK_env.sh
     - make install
 
-###################################################################################################
-OrientationRelationship:
-  stage: preprocessing
-  script: OrientationRelationship/test.py
-
-Pre_SeedGeneration:
-  stage: preprocessing
-  script: PreProcessing_SeedGeneration/test.py
-
-Pre_GeomGeneration:
-  stage: preprocessing
-  script: PreProcessing_GeomGeneration/test.py
-
-Pre_GeomModification:
-  stage: preprocessing
-  script: PreProcessing_GeomModification/test.py
-
-Pre_General:
-  stage: preprocessing
-  script: PreProcessing/test.py
-
-Spectral_geometryPacking:
-  stage: preprocessing
-  script: Spectral_geometryPacking/test.py
-
-###################################################################################################
-Post_General:
-  stage: postprocessing
-  script: PostProcessing/test.py
-
-Post_GeometryReconstruction:
-  stage: postprocessing
-  script: Spectral_geometryReconstruction/test.py
-
-Post_addCurl:
-  stage: postprocessing
-  script: addCurl/test.py
-
-Post_addDivergence:
-  stage: postprocessing
-  script: addDivergence/test.py
-
-Post_addGradient:
-  stage: postprocessing
-  script: addGradient/test.py
-
-Post_ParaviewRelated:
-  stage: postprocessing
-  script: ParaviewRelated/test.py
-
-###################################################################################################
-Compile_Intel:
-  stage: compileSpectralIntel 
-  script:
-    - module load $IntelCompiler $MPICH_Intel $PETSc_MPICH_Intel
-    - SpectralAll_compileIfort/test.py
-
-###################################################################################################
-Compile_GNU:
-  stage: compileSpectralGNU
-  script:
-    - module load $GNUCompiler $MPICH_GNU $PETSc_MPICH_GNU
-    - SpectralAll_compileGfortran/test.py
-
-###################################################################################################
-Compile_Intel_Prepare:
-  stage: prepareSpectral
-  script:
-    - module load $IntelCompiler $MPICH_Intel $PETSc_MPICH_Intel
-    - make -C $DAMASKROOT clean spectral install tidy
- 
-###################################################################################################
-Spectral_PackedGeometry:
-  stage: spectral
-  script: Spectral_PackedGeometry/test.py
-
-Spectral_parsingArguments:
-  stage: spectral
-  script: Spectral_parsingArguments/test.py
-
-StateIntegration_compareVariants:
-  stage: spectral
-  script: StateIntegration_compareVariants/test.py
-
-nonlocal_densityConservation:
-  stage: spectral
-  script: nonlocal_densityConservation/test.py
-
-Spectral_ipNeighborhood:
-  stage: spectral
-  script: Spectral_ipNeighborhood/test.py
-
-Nonlocal_Damage_DetectChanges:
-  stage: spectral
-  script: Nonlocal_Damage_DetectChanges/test.py
-
-SpectralAll_restart:
-  stage: spectral
-  script: SpectralAll_restart/test.py
-
-SpectralAll_parsingLoadCase:
-  stage: spectral
-  script: SpectralAll_parsingLoadCase/test.py
-
-SpectralBasic_loadCaseRotation:
-  stage: spectral
-  script: SpectralBasic_loadCaseRotation/test.py
-
-Spectral_MPI:
-  stage: spectral
-  script:
-    - module load $IntelCompiler $MPICH_Intel $PETSc_MPICH_Intel
-    - Spectral_MPI/test.py
-
-Plasticity_DetectChanges:
-  stage: spectral
-  script: Plasticity_DetectChanges/test.py
-
-Homogenization:
-  stage: spectral
-  script: Homogenization/test.py
-
-Phenopowerlaw_singleSlip:
-  stage: spectral
-  script: Phenopowerlaw_singleSlip/test.py
-
-HybridIA:
-  stage: spectral
-  script: HybridIA/test.py
-
-###################################################################################################
-Marc_compileIfort2014:
-  stage: compileMarc2014
-  script:
-    - module load $IntelCompiler16_0 $MSC2014
-    - Marc_compileIfort/test.py -m 2014
-
-###################################################################################################
-Marc_compileIfort2014.2:
-  stage: compileMarc2014.2
-  script:
-    - module load $IntelCompiler16_0 $MSC2014_2
-    - Marc_compileIfort/test.py -m 2014.2
-
-###################################################################################################
-Marc_compileIfort2015:
-  stage: compileMarc2015
-  script:
-    - module load $IntelCompiler16_0 $MSC2015
-    - Marc_compileIfort/test.py -m 2015
-
-###################################################################################################
-Marc_compileIfort2016:
-  stage: compileMarc2016
-  script:
-    - module load $IntelCompiler16_0 $MSC2016
-    - Marc_compileIfort/test.py -m 2016
-
-###################################################################################################
-Hex_elastic:
-  stage: marc
-  script:
-    - module load $IntelCompiler16_0 $MSC
-    - Hex_elastic/test.py
-
-CubicFCC_elastic:
-  stage: marc
-  script:
-    - module load $IntelCompiler16_0 $MSC
-    - CubicFCC_elastic/test.py
-
-CubicBCC_elastic:
-  stage: marc
-  script:
-    - module load $IntelCompiler16_0 $MSC
-    - CubicBCC_elastic/test.py
-
-J2_plasticBehavior:
-  stage: marc
-  script:
-    - module load $IntelCompiler16_0 $MSC
-    - J2_plasticBehavior/test.py
-
-###################################################################################################
-Abaqus_compile2016:
-  stage: compileAbaqus2016
-  script:
-    - module load $IntelCompiler16_0 $Abaqus2016
-    - Abaqus_compileIfort/test.py -a 2016
-
-###################################################################################################
-Abaqus_compile2017:
-  stage: compileAbaqus2017
-  script:
-    - module load $IntelCompiler16_0 $Abaqus2017
-    - Abaqus_compileIfort/test.py -a 2017
-
-###################################################################################################
-SpectralExample:
-  stage: example
-  only:
-    - development
-  script: SpectralAll_example/test.py
-
-AbaqusExample:
-  stage: example
-  only:
-    - development
-  script:
-    - module load $IntelCompiler16_0 $Abaqus
-    - Abaqus_example/test.py
-
+####################################################################################################
+#OrientationRelationship:
+#  stage: preprocessing
+#  script: OrientationRelationship/test.py
+#
+#Pre_SeedGeneration:
+#  stage: preprocessing
+#  script: PreProcessing_SeedGeneration/test.py
+#
+#Pre_GeomGeneration:
+#  stage: preprocessing
+#  script: PreProcessing_GeomGeneration/test.py
+#
+#Pre_GeomModification:
+#  stage: preprocessing
+#  script: PreProcessing_GeomModification/test.py
+#
+#Pre_General:
+#  stage: preprocessing
+#  script: PreProcessing/test.py
+#
+#Spectral_geometryPacking:
+#  stage: preprocessing
+#  script: Spectral_geometryPacking/test.py
+#
+####################################################################################################
+#Post_General:
+#  stage: postprocessing
+#  script: PostProcessing/test.py
+#
+#Post_GeometryReconstruction:
+#  stage: postprocessing
+#  script: Spectral_geometryReconstruction/test.py
+#
+#Post_addCurl:
+#  stage: postprocessing
+#  script: addCurl/test.py
+#
+#Post_addDivergence:
+#  stage: postprocessing
+#  script: addDivergence/test.py
+#
+#Post_addGradient:
+#  stage: postprocessing
+#  script: addGradient/test.py
+#
+#Post_ParaviewRelated:
+#  stage: postprocessing
+#  script: ParaviewRelated/test.py
+#
+####################################################################################################
+#Compile_Intel:
+#  stage: compileSpectralIntel 
+#  script:
+#    - module load $IntelCompiler $MPICH_Intel $PETSc_MPICH_Intel
+#    - SpectralAll_compileIfort/test.py
+#
+####################################################################################################
+#Compile_GNU:
+#  stage: compileSpectralGNU
+#  script:
+#    - module load $GNUCompiler $MPICH_GNU $PETSc_MPICH_GNU
+#    - SpectralAll_compileGfortran/test.py
+#
+####################################################################################################
+#Compile_Intel_Prepare:
+#  stage: prepareSpectral
+#  script:
+#    - module load $IntelCompiler $MPICH_Intel $PETSc_MPICH_Intel
+#    - make -C $DAMASKROOT clean spectral install tidy
+# 
+####################################################################################################
+#Spectral_PackedGeometry:
+#  stage: spectral
+#  script: Spectral_PackedGeometry/test.py
+#
+#Spectral_parsingArguments:
+#  stage: spectral
+#  script: Spectral_parsingArguments/test.py
+#
+#StateIntegration_compareVariants:
+#  stage: spectral
+#  script: StateIntegration_compareVariants/test.py
+#
+#nonlocal_densityConservation:
+#  stage: spectral
+#  script: nonlocal_densityConservation/test.py
+#
+#Spectral_ipNeighborhood:
+#  stage: spectral
+#  script: Spectral_ipNeighborhood/test.py
+#
+#Nonlocal_Damage_DetectChanges:
+#  stage: spectral
+#  script: Nonlocal_Damage_DetectChanges/test.py
+#
+#SpectralAll_restart:
+#  stage: spectral
+#  script: SpectralAll_restart/test.py
+#
+#SpectralAll_parsingLoadCase:
+#  stage: spectral
+#  script: SpectralAll_parsingLoadCase/test.py
+#
+#SpectralBasic_loadCaseRotation:
+#  stage: spectral
+#  script: SpectralBasic_loadCaseRotation/test.py
+#
+#Spectral_MPI:
+#  stage: spectral
+#  script:
+#    - module load $IntelCompiler $MPICH_Intel $PETSc_MPICH_Intel
+#    - Spectral_MPI/test.py
+#
+#Plasticity_DetectChanges:
+#  stage: spectral
+#  script: Plasticity_DetectChanges/test.py
+#
+#Homogenization:
+#  stage: spectral
+#  script: Homogenization/test.py
+#
+#Phenopowerlaw_singleSlip:
+#  stage: spectral
+#  script: Phenopowerlaw_singleSlip/test.py
+#
+#HybridIA:
+#  stage: spectral
+#  script: HybridIA/test.py
+#
+####################################################################################################
+#Marc_compileIfort2014:
+#  stage: compileMarc2014
+#  script:
+#    - module load $IntelCompiler16_0 $MSC2014
+#    - Marc_compileIfort/test.py -m 2014
+#
+####################################################################################################
+#Marc_compileIfort2014.2:
+#  stage: compileMarc2014.2
+#  script:
+#    - module load $IntelCompiler16_0 $MSC2014_2
+#    - Marc_compileIfort/test.py -m 2014.2
+#
+####################################################################################################
+#Marc_compileIfort2015:
+#  stage: compileMarc2015
+#  script:
+#    - module load $IntelCompiler16_0 $MSC2015
+#    - Marc_compileIfort/test.py -m 2015
+#
+####################################################################################################
+#Marc_compileIfort2016:
+#  stage: compileMarc2016
+#  script:
+#    - module load $IntelCompiler16_0 $MSC2016
+#    - Marc_compileIfort/test.py -m 2016
+#
+####################################################################################################
+#Hex_elastic:
+#  stage: marc
+#  script:
+#    - module load $IntelCompiler16_0 $MSC
+#    - Hex_elastic/test.py
+#
+#CubicFCC_elastic:
+#  stage: marc
+#  script:
+#    - module load $IntelCompiler16_0 $MSC
+#    - CubicFCC_elastic/test.py
+#
+#CubicBCC_elastic:
+#  stage: marc
+#  script:
+#    - module load $IntelCompiler16_0 $MSC
+#    - CubicBCC_elastic/test.py
+#
+#J2_plasticBehavior:
+#  stage: marc
+#  script:
+#    - module load $IntelCompiler16_0 $MSC
+#    - J2_plasticBehavior/test.py
+#
+####################################################################################################
+#Abaqus_compile2016:
+#  stage: compileAbaqus2016
+#  script:
+#    - module load $IntelCompiler16_0 $Abaqus2016
+#    - Abaqus_compileIfort/test.py -a 2016
+#
+####################################################################################################
+#Abaqus_compile2017:
+#  stage: compileAbaqus2017
+#  script:
+#    - module load $IntelCompiler16_0 $Abaqus2017
+#    - Abaqus_compileIfort/test.py -a 2017
+#
+####################################################################################################
+#SpectralExample:
+#  stage: example
+#  only:
+#    - development
+#  script: SpectralAll_example/test.py
+#
+#AbaqusExample:
+#  stage: example
+#  only:
+#    - development
+#  script:
+#    - module load $IntelCompiler16_0 $Abaqus
+#    - Abaqus_example/test.py
+#
 ###################################################################################################
 mergeIntoMaster: 
   stage: updateMaster
