finished debugging, master and release will never be tested

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,19 +1,19 @@
 stages:
   - prepareAll
-  #- preprocessing
-  #- postprocessing
-  #- compileSpectralIntel
-  #- compileSpectralGNU
-  #- prepareSpectral
-  #- spectral
-  #- compileMarc2014
-  #- compileMarc2014.2
-  #- compileMarc2015
-  #- compileMarc2016
-  #- marc
-  #- compileAbaqus2016
-  #- compileAbaqus2017
-  #- example
+  - preprocessing
+  - postprocessing
+  - compileSpectralIntel
+  - compileSpectralGNU
+  - prepareSpectral
+  - spectral
+  - compileMarc2014
+  - compileMarc2014.2
+  - compileMarc2015
+  - compileMarc2016
+  - marc
+  - compileAbaqus2016
+  - compileAbaqus2017
+  - example
   - updateMaster
   - createDocumentation
   - clean
@@ -89,224 +89,342 @@ checkout:
     - git clone -q git@magit1.mpie.de:damask/PRIVATE.git
     - source $DAMASKROOT/DAMASK_env.sh
     - make install
+  except:
+    - master
+    - release
 
-####################################################################################################
-#OrientationRelationship:
-#  stage: preprocessing
-#  script: OrientationRelationship/test.py
-#
-#Pre_SeedGeneration:
-#  stage: preprocessing
-#  script: PreProcessing_SeedGeneration/test.py
-#
-#Pre_GeomGeneration:
-#  stage: preprocessing
-#  script: PreProcessing_GeomGeneration/test.py
-#
-#Pre_GeomModification:
-#  stage: preprocessing
-#  script: PreProcessing_GeomModification/test.py
-#
-#Pre_General:
-#  stage: preprocessing
-#  script: PreProcessing/test.py
-#
-#Spectral_geometryPacking:
-#  stage: preprocessing
-#  script: Spectral_geometryPacking/test.py
-#
-####################################################################################################
-#Post_General:
-#  stage: postprocessing
-#  script: PostProcessing/test.py
-#
-#Post_GeometryReconstruction:
-#  stage: postprocessing
-#  script: Spectral_geometryReconstruction/test.py
-#
-#Post_addCurl:
-#  stage: postprocessing
-#  script: addCurl/test.py
-#
-#Post_addDivergence:
-#  stage: postprocessing
-#  script: addDivergence/test.py
-#
-#Post_addGradient:
-#  stage: postprocessing
-#  script: addGradient/test.py
-#
-#Post_ParaviewRelated:
-#  stage: postprocessing
-#  script: ParaviewRelated/test.py
-#
-####################################################################################################
-#Compile_Intel:
-#  stage: compileSpectralIntel 
-#  script:
-#    - module load $IntelCompiler $MPICH_Intel $PETSc_MPICH_Intel
-#    - SpectralAll_compileIfort/test.py
-#
-####################################################################################################
-#Compile_GNU:
-#  stage: compileSpectralGNU
-#  script:
-#    - module load $GNUCompiler $MPICH_GNU $PETSc_MPICH_GNU
-#    - SpectralAll_compileGfortran/test.py
-#
-####################################################################################################
-#Compile_Intel_Prepare:
-#  stage: prepareSpectral
-#  script:
-#    - module load $IntelCompiler $MPICH_Intel $PETSc_MPICH_Intel
-#    - make -C $DAMASKROOT clean spectral install tidy
-# 
-####################################################################################################
-#Spectral_PackedGeometry:
-#  stage: spectral
-#  script: Spectral_PackedGeometry/test.py
-#
-#Spectral_parsingArguments:
-#  stage: spectral
-#  script: Spectral_parsingArguments/test.py
-#
-#StateIntegration_compareVariants:
-#  stage: spectral
-#  script: StateIntegration_compareVariants/test.py
-#
-#nonlocal_densityConservation:
-#  stage: spectral
-#  script: nonlocal_densityConservation/test.py
-#
-#Spectral_ipNeighborhood:
-#  stage: spectral
-#  script: Spectral_ipNeighborhood/test.py
-#
-#Nonlocal_Damage_DetectChanges:
-#  stage: spectral
-#  script: Nonlocal_Damage_DetectChanges/test.py
-#
-#SpectralAll_restart:
-#  stage: spectral
-#  script: SpectralAll_restart/test.py
-#
-#SpectralAll_parsingLoadCase:
-#  stage: spectral
-#  script: SpectralAll_parsingLoadCase/test.py
-#
-#SpectralBasic_loadCaseRotation:
-#  stage: spectral
-#  script: SpectralBasic_loadCaseRotation/test.py
-#
-#Spectral_MPI:
-#  stage: spectral
-#  script:
-#    - module load $IntelCompiler $MPICH_Intel $PETSc_MPICH_Intel
-#    - Spectral_MPI/test.py
-#
-#Plasticity_DetectChanges:
-#  stage: spectral
-#  script: Plasticity_DetectChanges/test.py
-#
-#Homogenization:
-#  stage: spectral
-#  script: Homogenization/test.py
-#
-#Phenopowerlaw_singleSlip:
-#  stage: spectral
-#  script: Phenopowerlaw_singleSlip/test.py
-#
-#HybridIA:
-#  stage: spectral
-#  script: HybridIA/test.py
-#
-####################################################################################################
-#Marc_compileIfort2014:
-#  stage: compileMarc2014
-#  script:
-#    - module load $IntelCompiler16_0 $MSC2014
-#    - Marc_compileIfort/test.py -m 2014
-#
-####################################################################################################
-#Marc_compileIfort2014.2:
-#  stage: compileMarc2014.2
-#  script:
-#    - module load $IntelCompiler16_0 $MSC2014_2
-#    - Marc_compileIfort/test.py -m 2014.2
-#
-####################################################################################################
-#Marc_compileIfort2015:
-#  stage: compileMarc2015
-#  script:
-#    - module load $IntelCompiler16_0 $MSC2015
-#    - Marc_compileIfort/test.py -m 2015
-#
-####################################################################################################
-#Marc_compileIfort2016:
-#  stage: compileMarc2016
-#  script:
-#    - module load $IntelCompiler16_0 $MSC2016
-#    - Marc_compileIfort/test.py -m 2016
-#
-####################################################################################################
-#Hex_elastic:
-#  stage: marc
-#  script:
-#    - module load $IntelCompiler16_0 $MSC
-#    - Hex_elastic/test.py
-#
-#CubicFCC_elastic:
-#  stage: marc
-#  script:
-#    - module load $IntelCompiler16_0 $MSC
-#    - CubicFCC_elastic/test.py
-#
-#CubicBCC_elastic:
-#  stage: marc
-#  script:
-#    - module load $IntelCompiler16_0 $MSC
-#    - CubicBCC_elastic/test.py
-#
-#J2_plasticBehavior:
-#  stage: marc
-#  script:
-#    - module load $IntelCompiler16_0 $MSC
-#    - J2_plasticBehavior/test.py
-#
-####################################################################################################
-#Abaqus_compile2016:
-#  stage: compileAbaqus2016
-#  script:
-#    - module load $IntelCompiler16_0 $Abaqus2016
-#    - Abaqus_compileIfort/test.py -a 2016
-#
-####################################################################################################
-#Abaqus_compile2017:
-#  stage: compileAbaqus2017
-#  script:
-#    - module load $IntelCompiler16_0 $Abaqus2017
-#    - Abaqus_compileIfort/test.py -a 2017
-#
-####################################################################################################
-#SpectralExample:
-#  stage: example
-#  only:
-#    - development
-#  script: SpectralAll_example/test.py
-#
-#AbaqusExample:
-#  stage: example
-#  only:
-#    - development
-#  script:
-#    - module load $IntelCompiler16_0 $Abaqus
-#    - Abaqus_example/test.py
-#
 ###################################################################################################
-mergeIntoMaster: 
-  stage: updateMaster
+OrientationRelationship:
+  stage: preprocessing
+  script: OrientationRelationship/test.py
+  except:
+    - master
+    - release
+
+Pre_SeedGeneration:
+  stage: preprocessing
+  script: PreProcessing_SeedGeneration/test.py
+  except:
+    - master
+    - release
+
+Pre_GeomGeneration:
+  stage: preprocessing
+  script: PreProcessing_GeomGeneration/test.py
+  except:
+    - master
+    - release
+
+Pre_GeomModification:
+  stage: preprocessing
+  script: PreProcessing_GeomModification/test.py
+  except:
+    - master
+    - release
+
+Pre_General:
+  stage: preprocessing
+  script: PreProcessing/test.py
+  except:
+    - master
+    - release
+
+Spectral_geometryPacking:
+  stage: preprocessing
+  script: Spectral_geometryPacking/test.py
+  except:
+    - master
+    - release
+
+###################################################################################################
+Post_General:
+  stage: postprocessing
+  script: PostProcessing/test.py
+  except:
+    - master
+    - release
+
+Post_GeometryReconstruction:
+  stage: postprocessing
+  script: Spectral_geometryReconstruction/test.py
+  except:
+    - master
+    - release
+
+Post_addCurl:
+  stage: postprocessing
+  script: addCurl/test.py
+  except:
+    - master
+    - release
+
+Post_addDivergence:
+  stage: postprocessing
+  script: addDivergence/test.py
+  except:
+    - master
+    - release
+
+Post_addGradient:
+  stage: postprocessing
+  script: addGradient/test.py
+  except:
+    - master
+    - release
+
+Post_ParaviewRelated:
+  stage: postprocessing
+  script: ParaviewRelated/test.py
+  except:
+    - master
+    - release
+
+###################################################################################################
+Compile_Intel:
+  stage: compileSpectralIntel 
+  script:
+    - module load $IntelCompiler $MPICH_Intel $PETSc_MPICH_Intel
+    - SpectralAll_compileIfort/test.py
+  except:
+    - master
+    - release
+
+###################################################################################################
+Compile_GNU:
+  stage: compileSpectralGNU
+  script:
+    - module load $GNUCompiler $MPICH_GNU $PETSc_MPICH_GNU
+    - SpectralAll_compileGfortran/test.py
+  except:
+    - master
+    - release
+
+###################################################################################################
+Compile_Intel_Prepare:
+  stage: prepareSpectral
+  script:
+    - module load $IntelCompiler $MPICH_Intel $PETSc_MPICH_Intel
+    - make -C $DAMASKROOT clean spectral install tidy
+  except:
+    - master
+    - release
+ 
+###################################################################################################
+Spectral_PackedGeometry:
+  stage: spectral
+  script: Spectral_PackedGeometry/test.py
+  except:
+    - master
+    - release
+
+Spectral_parsingArguments:
+  stage: spectral
+  script: Spectral_parsingArguments/test.py
+  except:
+    - master
+    - release
+
+StateIntegration_compareVariants:
+  stage: spectral
+  script: StateIntegration_compareVariants/test.py
+  except:
+    - master
+    - release
+
+nonlocal_densityConservation:
+  stage: spectral
+  script: nonlocal_densityConservation/test.py
+  except:
+    - master
+    - release
+
+Spectral_ipNeighborhood:
+  stage: spectral
+  script: Spectral_ipNeighborhood/test.py
+  except:
+    - master
+    - release
+
+Nonlocal_Damage_DetectChanges:
+  stage: spectral
+  script: Nonlocal_Damage_DetectChanges/test.py
+  except:
+    - master
+    - release
+
+SpectralAll_restart:
+  stage: spectral
+  script: SpectralAll_restart/test.py
+  except:
+    - master
+    - release
+
+SpectralAll_parsingLoadCase:
+  stage: spectral
+  script: SpectralAll_parsingLoadCase/test.py
+  except:
+    - master
+    - release
+
+SpectralBasic_loadCaseRotation:
+  stage: spectral
+  script: SpectralBasic_loadCaseRotation/test.py
+  except:
+    - master
+    - release
+
+Spectral_MPI:
+  stage: spectral
+  script:
+    - module load $IntelCompiler $MPICH_Intel $PETSc_MPICH_Intel
+    - Spectral_MPI/test.py
+  except:
+    - master
+    - release
+
+Plasticity_DetectChanges:
+  stage: spectral
+  script: Plasticity_DetectChanges/test.py
+  except:
+    - master
+    - release
+
+Homogenization:
+  stage: spectral
+  script: Homogenization/test.py
+  except:
+    - master
+    - release
+
+Phenopowerlaw_singleSlip:
+  stage: spectral
+  script: Phenopowerlaw_singleSlip/test.py
+  except:
+    - master
+    - release
+
+HybridIA:
+  stage: spectral
+  script: HybridIA/test.py
+  except:
+    - master
+    - release
+
+###################################################################################################
+Marc_compileIfort2014:
+  stage: compileMarc2014
+  script:
+    - module load $IntelCompiler16_0 $MSC2014
+    - Marc_compileIfort/test.py -m 2014
+  except:
+    - master
+    - release
+
+###################################################################################################
+Marc_compileIfort2014.2:
+  stage: compileMarc2014.2
+  script:
+    - module load $IntelCompiler16_0 $MSC2014_2
+    - Marc_compileIfort/test.py -m 2014.2
+  except:
+    - master
+    - release
+
+###################################################################################################
+Marc_compileIfort2015:
+  stage: compileMarc2015
+  script:
+    - module load $IntelCompiler16_0 $MSC2015
+    - Marc_compileIfort/test.py -m 2015
+  except:
+    - master
+    - release
+
+###################################################################################################
+Marc_compileIfort2016:
+  stage: compileMarc2016
+  script:
+    - module load $IntelCompiler16_0 $MSC2016
+    - Marc_compileIfort/test.py -m 2016
+  except:
+    - master
+    - release
+
+###################################################################################################
+Hex_elastic:
+  stage: marc
+  script:
+    - module load $IntelCompiler16_0 $MSC
+    - Hex_elastic/test.py
+  except:
+    - master
+    - release
+
+CubicFCC_elastic:
+  stage: marc
+  script:
+    - module load $IntelCompiler16_0 $MSC
+    - CubicFCC_elastic/test.py
+  except:
+    - master
+    - release
+
+CubicBCC_elastic:
+  stage: marc
+  script:
+    - module load $IntelCompiler16_0 $MSC
+    - CubicBCC_elastic/test.py
+  except:
+    - master
+    - release
+
+J2_plasticBehavior:
+  stage: marc
+  script:
+    - module load $IntelCompiler16_0 $MSC
+    - J2_plasticBehavior/test.py
+  except:
+    - master
+    - release
+
+###################################################################################################
+Abaqus_compile2016:
+  stage: compileAbaqus2016
+  script:
+    - module load $IntelCompiler16_0 $Abaqus2016
+    - Abaqus_compileIfort/test.py -a 2016
+  except:
+    - master
+    - release
+
+###################################################################################################
+Abaqus_compile2017:
+  stage: compileAbaqus2017
+  script:
+    - module load $IntelCompiler16_0 $Abaqus2017
+    - Abaqus_compileIfort/test.py -a 2017
+  except:
+    - master
+    - release
+
+###################################################################################################
+SpectralExample:
+  stage: example
+  script: SpectralAll_example/test.py
   only:
     - development
+
+AbaqusExample:
+  stage: example
+  script:
+    - module load $IntelCompiler16_0 $Abaqus
+    - Abaqus_example/test.py
+  only:
+    - development
+
+##################################################################################################
+mergeIntoMaster: 
+  stage: updateMaster
   script:
     - cd $DAMASKROOT
     - export TESTEDREV=$(git describe)                                                              # might be detached from development branch
@@ -319,6 +437,8 @@ mergeIntoMaster:
     - git checkout development
     - git merge master -s ours                                                                      # only possible conflict is in VERSION file
     - git push origin development                                                                   # development is unchanged (as master is based on it) but has updated VERSION file
+  only:
+    - development
 
 ###################################################################################################
 AbaqusExp: 
@@ -326,24 +446,36 @@ AbaqusExp:
   script:
     - module load $IntelCompiler $MPICH_Intel $PETSc_MPICH_Intel $Doxygen
     - $DAMASKROOT/PRIVATE/documenting/runDoxygen.sh $DAMASKROOT abaqus_exp
+  except:
+    - master
+    - release
 
 AbaqusStd: 
   stage: createDocumentation
   script:
     - module load $IntelCompiler $MPICH_Intel $PETSc_MPICH_Intel $Doxygen
     - $DAMASKROOT/PRIVATE/documenting/runDoxygen.sh $DAMASKROOT abaqus_std
+  except:
+    - master
+    - release
 
 Marc: 
   stage: createDocumentation
   script:
     - module load $IntelCompiler $MPICH_Intel $PETSc_MPICH_Intel $Doxygen
     - $DAMASKROOT/PRIVATE/documenting/runDoxygen.sh $DAMASKROOT marc
+  except:
+    - master
+    - release
 
 Spectral: 
   stage: createDocumentation
   script:
     - module load $IntelCompiler $MPICH_Intel $PETSc_MPICH_Intel $Doxygen
     - $DAMASKROOT/PRIVATE/documenting/runDoxygen.sh $DAMASKROOT spectral
+  except:
+    - master
+    - release
 
 ###################################################################################################
 removeLock: 
@@ -352,3 +484,6 @@ removeLock:
     - echo 'Do nothing'
   when: always
   script: rm $HOME/GitLabCI.lock
+  except:
+    - master
+    - release
