--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,7 @@ variables:
   #================================================================================================
   # Shortcut names
   #================================================================================================
-  DAMASKROOT:                      "$HOME/GitlabCI_Pipeline_$CI_PIPELINE_ID/DAMASK"
+  DAMASKROOT:                      "$HOME/GitLabCI_Pipeline_$CI_PIPELINE_ID/DAMASK"
 
   #================================================================================================
   # Names of module files to load
@@ -79,8 +79,8 @@ variables:
 checkout: 
   stage: prepareAll
   before_script: 
-    - while [ -e $HOME/GitLabCI.lock ]; do sleep 5m; done
-    - echo $CI_PIPELINE_ID > $HOME/GitLabCI.lock
+    - echo $CI_PIPELINE_ID >> $HOME/GitLabCI.queue
+    - while [ "$(awk '/$CI_PIPELINE_ID/{print NR}' GitLabCI.queue)" -ne 1 ];do sleep 5m; done
   script:
     - mkdir -p $DAMASKROOT
     - git clone -q git@magit1.mpie.de:damask/DAMASK.git $DAMASKROOT
@@ -484,7 +484,7 @@ removeLock:
   before_script: 
     - echo 'Do nothing'
   when: always
-  script: if grep -q $CI_PIPELINE_ID $HOME/GitLabCI.lock; then rm $HOME/GitLabCI.lock; fi
+  script: sed -i '/$CI_PIPELINE_ID/d' GitLabCI.queue
   except:
     - master
     - release
